--- a/research/03_prepare_callbacks.ipynb
+++ b/research/03_prepare_callbacks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "bddbf03f",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "889c9e14",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Lenovo\\\\Downloads\\\\ML Projects\\\\Brain-Tumor-Detection'"
+       "'c:\\\\Users\\\\Lenovo\\\\Downloads\\\\ML Projects\\\\Brain-Tumor-Detection\\\\research'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "1df5ba3f",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "a58a028f",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "ccd32570",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "id": "ad324bbc",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "c0c80ab3",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "ad479035",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "id": "8755d2c6",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "id": "ca0074d7",
    "metadata": {},
    "outputs": [
@@ -192,11 +192,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-07-10 16:05:33,343:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-07-10 16:05:33,345:INFO:common:yaml file: params.yaml loaded successfully]\n",
-      "[2025-07-10 16:05:33,347:INFO:common:created directory at: artifacts]\n",
-      "[2025-07-10 16:05:33,348:INFO:common:created directory at: artifacts\\prepare_callbacks\\checpoint_dir]\n",
-      "[2025-07-10 16:05:33,348:INFO:common:created directory at: artifacts\\prepare_callbacks\\tensorboard_root_log_dir]\n"
+      "[2025-07-10 22:49:58,684:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-07-10 22:49:58,684:INFO:common:yaml file: params.yaml loaded successfully]\n",
+      "[2025-07-10 22:49:58,684:INFO:common:created directory at: artifacts]\n",
+      "[2025-07-10 22:49:58,684:INFO:common:created directory at: artifacts\\prepare_callbacks\\checpoint_dir]\n",
+      "[2025-07-10 22:49:58,693:INFO:common:created directory at: artifacts\\prepare_callbacks\\tensorboard_root_log_dir]\n"
      ]
     }
    ],
