--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "5da9bbb7",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "395bebd1",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c11765cb",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "'c:\\\\Users\\\\Lenovo\\\\Downloads\\\\ML Projects\\\\Brain-Tumor-Detection'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "222fbf90",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2a7b9c3b",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "332f5a51",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "71463e9b",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "ddd8f9bc",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "5dfe3264",
    "metadata": {},
    "outputs": [
@@ -182,11 +182,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-07-09 17:05:46,848:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-07-09 17:05:46,849:INFO:common:yaml file: params.yaml loaded successfully]\n",
-      "[2025-07-09 17:05:46,850:INFO:common:created directory at: artifacts]\n",
-      "[2025-07-09 17:05:46,850:INFO:common:created directory at: artifacts/data_ingestion]\n",
-      "[2025-07-09 17:07:35,800:INFO:2132865262:artifacts/data_ingestion/data.zip download with the following info: \n",
+      "[2025-07-10 22:45:39,969:INFO:common:yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-07-10 22:45:39,973:INFO:common:yaml file: params.yaml loaded successfully]\n",
+      "[2025-07-10 22:45:39,973:INFO:common:created directory at: artifacts]\n",
+      "[2025-07-10 22:45:39,973:INFO:common:created directory at: artifacts/data_ingestion]\n",
+      "[2025-07-10 22:45:55,616:INFO:2132865262:artifacts/data_ingestion/data.zip download with the following info: \n",
       "Connection: close\n",
       "Content-Length: 7925852\n",
       "Cache-Control: max-age=300\n",
@@ -197,20 +197,20 @@
       "X-Content-Type-Options: nosniff\n",
       "X-Frame-Options: deny\n",
       "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: FFC2:BF864:9C68BA:B2B08D:686E5B1C\n",
+      "X-GitHub-Request-Id: 58FE:3A9035:132FD1:190394:686FFC46\n",
       "Accept-Ranges: bytes\n",
-      "Date: Wed, 09 Jul 2025 12:05:49 GMT\n",
+      "Date: Thu, 10 Jul 2025 17:45:44 GMT\n",
       "Via: 1.1 varnish\n",
-      "X-Served-By: cache-sin-wsss1830034-SIN\n",
+      "X-Served-By: cache-fjr990020-FJR\n",
       "X-Cache: MISS\n",
       "X-Cache-Hits: 0\n",
-      "X-Timer: S1752062749.094265,VS0,VE605\n",
+      "X-Timer: S1752169543.108644,VS0,VE1174\n",
       "Vary: Authorization,Accept-Encoding\n",
       "Access-Control-Allow-Origin: *\n",
       "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: e29e7253849d82e7a11b5faca5db58381d828901\n",
-      "Expires: Wed, 09 Jul 2025 12:10:49 GMT\n",
-      "Source-Age: 0\n",
+      "X-Fastly-Request-ID: 8aab7db7ca299a31e167fd07d97314a88e2382bb\n",
+      "Expires: Thu, 10 Jul 2025 17:50:44 GMT\n",
+      "Source-Age: 1\n",
       "\n",
       "]\n"
      ]
